# kivyx

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg
doc/: conf.py  index.rst  kivyx-uix-analogclock.rst  kivyx-uix-behavior-fontsizeadjustment.rst  kivyx-uix-behaviors-fontsizeadjustment.rst  kivyx-uix-behaviors-tablikelooks.rst  kivyx-uix-drawer.rst
docs/: .buildinfo  genindex.html  index.html  kivyx-misc-bgmplayer.html  kivyx-uix-analogclock.html  kivyx-uix-aspectratio.html  kivyx-uix-behaviors-fontsizeadjustment.html  kivyx-uix-behaviors-spinner.html  kivyx-uix-behaviors-tablikelooks.html  kivyx-uix-boxlayout.html  kivyx-uix-drawer.html  kivyx-uix-magnet.html  kivyx-utils.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: kivyx-misc-bgmplayer.rst.txt  kivyx-uix-analogclock.rst.txt  kivyx-uix-aspectratio.rst.txt  kivyx-uix-drawer.rst.txt
examples/: using_uix_drawer.py  using_uix_magnet.py  using_uix_tabs.py  using_uix_tabs2.py
examples/assets/: country-flags.atlas  five_birds.atlas
examples/kivyx.misc.bgmplayer/: debug_Bgm.py  debug_BgmPlayer_CachedLoader.py  debug_BgmPlayer_MemoryEfficientLoader.py.py
examples/kivyx.uix.analogclock/: bit_fancy_one.py  custom_images.py  debug.py  simple_one.py  stress_test.py
examples/kivyx.uix.aspectratio/: debug.py
examples/kivyx.uix.behavior.fontsizeadjustment/: debug.py  dynamically_changing_widget_size_using_splitter.py  fail_when_the_font_size_is_extreamly_small.py  fail_when_using_font_tag.py  fail_when_using_size_tag.py
examples/kivyx.uix.behavior.spinner/: debug.py  imitating_the_official_spinner.py  locale_chooser.py
examples/kivyx.uix.behaviors.fontsizeadjustment/: debug.py  dynamically_changing_widget_size_using_splitter.py  fail_when_the_font_size_is_extreamly_small.py  fail_when_using_font_tag.py  (+1 more)
kivyx/: properties.py
manual_tests/: uix_boxlayout.py  uix_divider.py  uix_tabs.py
sphinx/: conf.py  kivyx-uix-behaviors-fontsizeadjustment.rst  kivyx-uix-behaviors-spinner.rst  kivyx-uix-boxlayout.rst  kivyx-uix-magnet.rst  kivyx-utils.rst  modules.rst
tests/: about_get_extents.md  conftest.py  test_properties_autocloseproperty.py  test_properties_freezableautocloseproperty.py  test_uix_analogclock.py  test_uix_aspectratio.py  test_uix_behavior_fakechildren.py  test_uix_behavior_fontsizeadjustment.py  test_uix_behaviors_fontsizeadjustment.py  test_uix_boxlayout.py  test_uix_recycleboxlayout.py  test_utils_eternalcoroutineholder.py  test_utils_register_assets_just_for_testing.py  test_utils_register_assets_just_for_tests_and_examples.py  test_utils_save_and_restore_widget_location.py  test_utils_strip_proxy_ref.py  test_utils_suppress_event.py
(+100 files in other folders)
