[tool.poetry]
name = "kivyx"
version = "0.1.0"
description = "Experiment of Kivy-related modules"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
readme = "README.md"
repository = 'https://github.com/gottadiveintopython/kivyx'
homepage = 'https://github.com/gottadiveintopython/kivyx'
keywords = ['kivy']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [{include = "kivyx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
asynckivy = { version = "^0.5.4", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
kivy = {url = "https://github.com/kivy/kivy/archive/refs/tags/2.1.0.zip"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
