[tool.poetry]
name = "kivyx"
version = "0.1.0"
description = "Experiment of Kivy-related modules"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
readme = "README.rst"
repository = 'https://github.com/gottadiveintopython/kivyx'
homepage = 'https://github.com/gottadiveintopython/kivyx'
keywords = ['kivy']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [{include = "kivyx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
asynckivy = "~0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
kivy = "^2.2.1"


[tool.poetry.group.doc.dependencies]
Sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["slow"]
