[metadata]
name = kivyx
version = attr: kivyx.__version__
url = https://github.com/gottadiveintopython/kivyx
author = Gotta Dive Into Python
author_email = flow4re2c@gmail.com
license_file = LICENSE
classifier =
  Intended Audience :: Developers
  Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  asynckivy
